Change base image
don't use data volume at the monent